<resources>
    <string name="app_name">Login</string>
    <string name="welcome">Welcome</string>
    <string name="id">Email Address</string>
    <string name="password">Password</string>
    <string name="loginbtn">Login</string>
    <string name="signUp">"Don't have account? Sign Up"</string>
    <string name="signup">Signup</string>
    <string name="Signup">SignUp</string>
    <string name="Re_password">Confirm Password</string>

</resources>
