<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signupActivity"
    android:background="@color/bg_gradient_start">

    <LinearLayout
        android:id="@+id/activity_signup_linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:gravity="center">

        <TextView
            android:id="@+id/activity_signup_signupTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Signup"
            android:textSize="40dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif-condensed"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:weightSum="3">
            <EditText
                android:id="@+id/activity_signup_emailEd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/id"
                android:layout_weight="1"
                android:textAlignment="center"
                android:inputType="textEmailAddress"
                android:padding="5dp"
                android:background="@color/white"
                android:layout_centerHorizontal="true" />
            <EditText
                android:id="@+id/activity_signup_passwordEd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:layout_weight="1"
                android:textAlignment="center"
                android:inputType="numberPassword"
                android:padding="5dp"
                android:background="@color/white"
                android:layout_centerHorizontal="true" />
            <EditText
                android:id="@+id/activity_signup_confirmPasswordEd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Re_password"
                android:layout_weight="1"
                android:textAlignment="center"
                android:inputType="numberPassword"
                android:padding="5dp"
                android:background="@color/white"
                android:layout_centerHorizontal="true" />

            <Button
                android:id="@+id/activity_signup_signupbtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Signup"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:layout_marginTop="30dp"
                android:background="@color/bg_gradient_end"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>